--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "next": "10.0.3",
+    "next-images": "^1.6.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
